# tapo-cam

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  pyproject.toml  requirements.dev.txt  requirements.txt
src/: main.py
