[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel" ]

[project]
name = "tapo-cam"
version = "0.1.0"
description = "CLI for controlling TP-Link Tapo cameras"
authors = [ { name = "Ben Gosney", email = "bengosney@googlemail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [ "pytapo", "typer" ]
optional-dependencies.dev = [ "icecream", "mypy", "pip-tools", "pre-commit", "ruff" ]
scripts.tapo-cam = "main:app"

[tool.setuptools]
license-files = [ "LICENSE" ]

[tool.ruff]
target-version = "py312"
line-length = 120

format.indent-style = "space"
format.quote-style = "double"
format.docstring-code-format = true

lint.select = [ "C90", "E", "F", "FURB", "I", "N", "PERF", "PL", "RUF", "TRY", "UP" ]
lint.ignore = [ "E741", "PLR2004" ]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
